# code-memory

./: .env.example  .gitignore  CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
docker/: docker-compose.yml
docs/: BENCHMARK.md  BENCHMARK_VS_BASELINE.json  BENCHMARK_VS_BASELINE.md  benchmark-raw.json
plugins/claude-code/: README.md  install.sh
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: code-memory.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: on-post-tool.js  on-pre-tool.js  on-retrieve-seen.js  on-session-start.js  on-stop.js  on-user-prompt.js
plugins/cursor/: README.md  install.sh
plugins/cursor/hooks/: hooks.json.template
plugins/cursor/rules/: code-memory.mdc
plugins/cursor/scripts/: on-after-file-edit.js  on-before-mcp-execution.js  on-before-submit-prompt.js  on-post-tool-use.js  on-pre-compact.js  on-pre-tool-use.js  on-session-end.js  on-session-start.js  on-stop.js  resolver-debounce.js
plugins/opencode/: README.md  install.sh  package-lock.json  package.json  tsconfig.json
plugins/opencode/scripts/: add-mcp.py  install.mjs  uninstall.mjs
plugins/opencode/src/: code-memory.ts  memory-client.ts
plugins/vibe/: README.md  install.sh
scripts/: benchmark.py  benchmark_queries.json  benchmark_vs_baseline.py  benchmark_vs_grep.sh  ingest.py  install.ps1  install.sh
src/code_memory/: __init__.py  _console.py  _docker.py  _proc.py  _volumes.py  cli.py  config.py  mcp_server.py  metrics.py  resilience.py  updater.py
tests/: test_autostart_adapters.py  test_autostart_daemon.py  test_autostart_migrate.py  test_chunk_text.py  test_claim_extractor.py  test_claim_indexer.py  test_claim_resolver.py  test_claim_store.py  test_cli_watchd.py  test_config_embed_dim.py  test_config_ipv4_defaults.py  test_config_sentinel.py  test_console_encoding.py  test_csproj.py  test_dll_members.py  test_dll_parser.py  test_docker_resolve.py  test_embed_backend.py  test_embed_cache.py  test_embed_m3.py  test_embed_ollama_timeout.py  test_embed_tei.py  test_ensure_fresh_no_blocking.py  test_episode_dedup.py  test_episode_head_sha.py  test_extractor_csharp.py  test_extractor_dart.py  test_extractor_filters.py  test_extractor_parser_compat.py  test_extractor_php.py  test_extractor_python_imports.py  test_extractor_receiver_type.py  test_extractor_references.py  test_extractor_sanity.py  test_extractor_ts_abstract.py  test_extractor_ts_inject.py  test_extractor_utf8.py  test_extras_offer.py  test_falkor_connect_guard.py  test_file_containment.py  (+50 more)
(+59 files in other folders)
