[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-memory"
version = "0.1.0"
description = "Local lightweight memory layer for coding agents: FalkorDB + Qdrant + Ollama + tree-sitter"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "qdrant-client>=1.12",
  "falkordb>=1.0.10",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack>=0.7",
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "mcp>=1.0",
  "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
code-memory = "code_memory.cli:app"
code-memory-mcp = "code_memory.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
