[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flurryx-code-memory"
version = "0.4.0"
description = "Local lightweight memory layer for coding agents: FalkorDB + Qdrant + Ollama (BGE-M3) + tree-sitter"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "qdrant-client>=1.12",
  "falkordb>=1.0.10",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack>=0.7",
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "mcp>=1.0",
  "anyio>=4.4",
  "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]
# Optional in-process FlagEmbedding backend for true m3 dense+sparse
# (EMBED_BACKEND=flagembed). Heavy (~2.3 GB weights); only worth it
# inside long-lived processes (watcher, MCP server).
hybrid = [
  "FlagEmbedding>=1.3",
  "torch>=2.1",
]
# .NET assembly metadata indexing. Pure-Python PE reader; no dotnet
# runtime required. Pulls assembly identity + public type surface from
# DLLs referenced by .csproj PackageReference / ProjectReference.
dotnet = [
  "dnfile>=0.15",
]

[project.scripts]
code-memory = "code_memory.cli:app"
code-memory-mcp = "code_memory.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
  "torch", "torch.*",
  "sentence_transformers", "sentence_transformers.*",
  "FlagEmbedding", "FlagEmbedding.*",
  "dnfile", "dnfile.*",
]
ignore_missing_imports = true
